feat: 添加 Azure OpenAI 作为智能摘要提供商
- 新增 _call_azure_openai() 方法，使用 AsyncAzureOpenAI 客户端
- 新增 _try_fallback_providers() 统一降级链: Azure OpenAI → Claude → OpenAI
- 更新 settings.yaml 增加 azure_openai 配置段
- 更新 .env.example 增加 Azure OpenAI 环境变量
- 更新 GitHub Actions 注入 Azure OpenAI secrets
- 默认 LLM_PROVIDER 改为 azure_openai

--- a/.github/workflows/daily_news.yml
+++ b/.github/workflows/daily_news.yml
@@ -62,7 +62,11 @@ jobs:
           # LLM
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          LLM_PROVIDER: ${{ secrets.LLM_PROVIDER || 'claude' }}
+          AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
+          AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
+          AZURE_OPENAI_DEPLOYMENT: ${{ secrets.AZURE_OPENAI_DEPLOYMENT }}
+          AZURE_OPENAI_API_VERSION: ${{ secrets.AZURE_OPENAI_API_VERSION }}
+          LLM_PROVIDER: ${{ secrets.LLM_PROVIDER || 'azure_openai' }}
           # 微博/知乎
           WEIBO_COOKIE: ${{ secrets.WEIBO_COOKIE }}
           ZHIHU_COOKIE: ${{ secrets.ZHIHU_COOKIE }}
