--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,13 @@ REDDIT_USER_AGENT=Get-LLM-News/1.0
 # 申请地址: https://console.anthropic.com/
 ANTHROPIC_API_KEY=
 
+# Azure OpenAI API (推荐)
+# 申请地址: https://portal.azure.com/ -> Azure OpenAI 资源
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_API_KEY=
+AZURE_OPENAI_DEPLOYMENT=
+AZURE_OPENAI_API_VERSION=2024-12-01-preview
+
 # OpenAI API (备用)
 # 申请地址: https://platform.openai.com/api-keys
 OPENAI_API_KEY=
@@ -32,8 +39,8 @@ ZHIHU_COOKIE=
 # 日志级别: DEBUG, INFO, WARNING, ERROR
 LOG_LEVEL=INFO
 
-# LLM 摘要模型选择: claude 或 openai
-LLM_PROVIDER=claude
+# LLM 摘要模型选择: azure_openai | claude | openai
+LLM_PROVIDER=azure_openai
 
 # 每日报告最大条目数
 MAX_ITEMS_PER_REPORT=50
