--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -76,10 +76,18 @@ collection:
 
 # LLM 摘要配置
 summarizer:
-  # 首选 LLM 提供商: claude | openai
-  provider: claude
+  # 首选 LLM 提供商: azure_openai | claude | openai
+  provider: azure_openai
 
-  # Claude 模型
+  # Azure OpenAI 配置（推荐）
+  # 实际值通过环境变量 / GitHub Secrets 注入
+  azure_openai:
+    endpoint: ""           # AZURE_OPENAI_ENDPOINT 环境变量优先
+    api_key: ""            # AZURE_OPENAI_API_KEY 环境变量优先
+    deployment: ""         # AZURE_OPENAI_DEPLOYMENT 环境变量优先
+    api_version: "2024-12-01-preview"
+
+  # Claude 模型（备用）
   claude_model: claude-sonnet-4-20250514
 
   # OpenAI 模型（备用）
